Multiple cleanups, more documentation added and tests changed.